Fix CSP in head to permit Google fonts, fix some layout spacing

--- a/source/bricks/hero/_hero.scss
+++ b/source/bricks/hero/_hero.scss
@@ -74,6 +74,10 @@
       background-color: $color-tertiary-transparent;
     }
 
+    &.gradient {
+      background-image: linear-gradient(141deg, $color-tertiary-transparent 0%, $color-secondary-transparent 50%, $color-primary-transparent 75%);
+    }
+
     &.black {
       background-color: $color-black-transparent;
     }
@@ -97,10 +101,10 @@
   }
 
   .title {
-    margin-bottom: .75rem;
+    margin-bottom: $spacing-small;
   }
 
   .text {
-    margin-bottom: 2rem;
+    margin-bottom: $spacing-medium;
   }
 }
