--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -8,11 +8,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-heading;
-  font-weight: 700;
-}
-
-h1, h2, h3 {
-  text-transform: uppercase;
+  font-weight: 800;
+  line-height: 110%;
 }
 
 h1 {
